<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/spacing_16dp">

    <ImageView
        android:id="@+id/ivBot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_connection_title"
        android:textColor="@color/background_red_medium"
        android:textSize="@dimen/text_18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/ivBot" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8dp"
        android:gravity="center"
        android:text="@string/no_connection_message"
        android:textColor="@color/background_red_medium"
        android:textSize="@dimen/text_12sp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvSubMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_4dp"
        android:gravity="center"
        android:text="@string/no_connection_sub_message"
        android:textSize="@dimen/text_11sp"
        app:layout_constraintTop_toBottomOf="@+id/tvMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>
