<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_components">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/spacing_40dp"
        android:paddingEnd="@dimen/spacing_40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_book_large"
            app:layout_constraintBottom_toTopOf="@+id/formConstraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/background_red_medium" />

        <com.bzapps.booksapp.shared.components.form.FormConstraintLayout
            android:id="@+id/formConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:formSubmitButton="@+id/btLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivTitle">

            <com.bzapps.booksapp.shared.components.edittext.CustomInputLayout
                android:id="@+id/cilLogin"
                style="@style/CustomInputLayout"
                android:layout_width="@dimen/stretch_content"
                android:layout_height="wrap_content"
                app:endIconMode="custom"
                app:endIconTint="@color/background_red_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.bzapps.booksapp.shared.components.edittext.CustomEditText
                    android:id="@+id/etLogin"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login"
                    android:imeOptions="actionNext"
                    android:inputType="textWebPassword"
                    android:maxLength="14"
                    app:fieldValidationType="filed_text"
                    app:field_required="true"
                    app:field_validationMessage="@string/login_required_message" />

            </com.bzapps.booksapp.shared.components.edittext.CustomInputLayout>

            <com.bzapps.booksapp.shared.components.edittext.CustomInputLayout
                android:id="@+id/cilPassword"
                style="@style/CustomInputLayout"
                android:layout_width="@dimen/stretch_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cilLogin"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/background_red_light">

                <com.bzapps.booksapp.shared.components.edittext.CustomEditText
                    android:id="@+id/etPassword"
                    style="@style/CustomEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textWebPassword"
                    app:fieldValidationType="field_password"
                    app:field_validationMessage="@string/password_required_message"
                    app:field_required="true" />

            </com.bzapps.booksapp.shared.components.edittext.CustomInputLayout>

            <Button
                android:id="@+id/btLogin"
                style="@style/ButtonRoundedRed"
                android:enabled="false"
                android:text="@string/login_button"
                android:layout_marginTop="@dimen/spacing_32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cilPassword"
                tools:enabled="true" />

        </com.bzapps.booksapp.shared.components.form.FormConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>